<resources>
    <string name="app_name">Birthdays</string>
    <string name="date_format">%1$td.%1$tm.%1$tY</string>
    <string name="date_format_y">%1$tY</string>
    <string name="date_format_m">%1$tm</string>
    <string name="date_format_d">%1$td</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_confirm">Confirm</string>
    <string name="menu_delete">Delete</string>

    <string name="add_title">Add entry</string>
    <string name="edit_title">Edit entry</string>
    <string name="add_or_edit_submit">Save data</string>
    <string name="add_date_picker_dialog_title">Choose birthday</string>
    <string name="add_day_hint">day</string>
    <string name="add_month_hint">month</string>
    <string name="add_year_hint">year</string>
    <string name="add_first_name_hint">First Name</string>
    <string name="add_last_name_hint">Last Name</string>
    <string name="add_notes_hint">Additional Info</string>
    <string name="add_error_field_required">required</string>
    <string name="add_error_invalid_date">invalid date</string>

    <string name="delete_dialog_title">Do you want to permanently delete this entry?</string>
    <string name="delete_dialog_confirm">Yes</string>
    <string name="delete_dialog_cancel">No</string>

    <string name="cd_calendar">Pick date</string>

    <string name="notification_channel_id" translatable="false">BIRTHDAY_NOTIFICATIONS</string>
    <string name="notification_channel_name">Birthday reminders</string>
    <string name="notification_channel_description">Birthday reminders description TODO</string>
    <string name="notification_title">Birthday reminder</string>
    <string name="notification_text">Birthday of %1$s %2$s (%3$d)!</string>
</resources>
